[package]
name = "rust-freqdist"
description = "An implementation of a Frequency Distribution in Rust"
version = "0.0.2"
documentation = "http://ferristseng.com/assets/freqdist/freqdist/index.html"
license = "MIT"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
repository = "https://github.com/ferristseng/rust-freqdist"

[lib]
name = "freqdist"
path = "src/lib.rs"

[dependencies.xxhash]
version = "0.0.4"
