[package]
name = "rust-freqdist"
description = "An implementation of a Frequency Distribution in Rust"
version = "0.1.5"
license = "MIT OR Apache-2.0"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
repository = "https://github.com/ferristseng/rust-freqdist"

[lib]
name = "freqdist"
path = "src/lib.rs"
